# spaemis

./: .copier-answers.yml  .coveragerc  .env.sample  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  README.rst  pyproject.toml  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: bump.yaml  ci-cd-workflow.yml  ci.yaml  commits.yaml  deploy.yaml  release.yaml
data/processed/proxies/sedacs/: gpw_v4_population_density_adjusted_to_2015_unwpp_country_totals_rev11_2020_2pt5_aus.nc  popdynamics-base_year-2000-rev01-byr.nc
data/raw/: edgar_sectors.csv
data/raw/configuration/mappings/: australia_H2_scalers.yaml  australia_mappings.yaml  victoria_H2_scalers.yaml  victoria_mappings.yaml
data/raw/configuration/point_sources/: federal_locations.csv  hysupply_locations.csv
data/raw/configuration/scenarios/: cr-ssp119_australia_H2_scalers.yaml  cr-ssp119_australia_scalers.csv  cr-ssp119_victoria_H2_scalers.yaml  cr-ssp119_victoria_scalers.csv  cr-ssp226_australia_H2_scalers.yaml  cr-ssp226_australia_scalers.csv  cr-ssp226_victoria_H2_scalers.yaml  cr-ssp226_victoria_scalers.csv  cr-ssp245_australia_H2_scalers.yaml  cr-ssp245_australia_scalers.csv  cr-ssp245_victoria_H2_scalers.yaml  cr-ssp245_victoria_scalers.csv  ssp119.yaml  ssp119_australia.yaml  ssp119_australia_scalers.csv  ssp119_victoria.yaml  ssp119_victoria_scalers.csv  ssp126.yaml  ssp126_australia.yaml  ssp126_australia_scalers.csv  ssp126_victoria.yaml  ssp126_victoria_scalers.csv  ssp226_australia.yaml  ssp226_victoria.yaml  ssp245-high-production_victoria.yaml  ssp245_australia.yaml  ssp245_australia_scalers.csv  ssp245_victoria.yaml  ssp245_victoria_scalers.csv
data/raw/masks/: victoria_border_mask.gpkg
data/raw/scenarios/v20230324_1/IMAGE_ssp119_med/: emissions_country.csv
data/raw/scenarios/v20230324_1/MESSAGE-GLOBIOM_ssp245_med/: emissions_country.csv
data/raw/scenarios/v20230324_1/REMIND-MAGPIE_ssp226_med/: emissions_country.csv
data/raw/scenarios/v20230327_1/MESSAGE-GLOBIOM_ssp245_high/: high-production-emissions.csv
docs/source/: changelog.md  conf.py  development.md  index.md  input_data.md  notebooks.md
docs/source/api/: spaemis.commands.base.rst  spaemis.commands.generate_command.rst  spaemis.commands.gse_emis_command.rst  spaemis.commands.point_source_command.rst  spaemis.commands.rst  spaemis.config.rst  spaemis.constants.rst  spaemis.gse_emis.rst  spaemis.input_data.rst  spaemis.inventory.rst  spaemis.main.rst  spaemis.project.rst  spaemis.rst  spaemis.scaling.base.rst  spaemis.scaling.constant.rst  spaemis.scaling.exclude.rst  spaemis.scaling.point_source.rst  spaemis.scaling.proxy.rst  spaemis.scaling.relative_change.rst  spaemis.scaling.rst  spaemis.scaling.timeseries.rst  spaemis.unit_registry.rst  spaemis.utils.rst
docs/source/notebooks/: basic-demo.py
notebooks/: 000_extract_scenario.py  100_compare.py  100_copy_inputs.py  100_explore_scalers.py  200_explore_proxies.py  200_run_projection.py  200_run_victoria.py  300_plot_results.py  jupytext.toml
notebooks/exploratory/: 000_check_ceds.py  100_compare.py  100_explore_scalers.py  110_explore_proxies.py  300_build_aus_inventory.py
scripts/: buildemissions_glo.sh  decrypt_secrets.sh  download_edgar.py  downsample_input4MIPS.py  downsample_inventory.py  extract_residential_density.py  extract_sedacs.py  generate-from-mappings.sh  run-all.sh  test-install.py
src/spaemis/: __init__.py  adapter.py  config.py  constants.py  gse_emis.py  input_data.py  inventory.py  main.py  notebooks.py  project.py  unit_registry.py  utils.py
src/spaemis/commands/: __init__.py  base.py  generate_command.py  gse_emis_command.py  point_source_command.py  project_command.py  run_command.py
src/spaemis/config/: ssp245.yaml
src/spaemis/config/scenarios/: ssp119.yaml  ssp119_scalers.csv  ssp126.yaml  ssp126_scalers.csv  ssp245.yaml  ssp245_scalers.csv
src/spaemis/scaling/: __init__.py  base.py  constant.py  exclude.py  point_source.py  proxy.py  relative_change.py  timeseries.py
src/spaemis_glo/: Makefile  spaemis_glo.f90  utilities.f90
tests/: conftest.py
tests/test-data/config/: emissions_country.csv  emissions_total.csv  test-config-with-csv.yaml  test-config.yaml  test_point_sources.yaml  test_scalers.csv
tests/test-data/inventory/decimated/: inventory_decimated.nc
tests/test-data/inventory/decimated/2016/: aircraft_projected.csv  architect_coating_projected.csv  bakery_projected.csv  charcoal_projected.csv  crematoria_projected.csv  cutback_bitumen_projected.csv  domestic_solvents_projected.csv  dry_cleaning_projected.csv  gas_leak_projected.csv  industry_diffuse_projected.csv  industry_projected.csv  motor_vehicles_projected.csv  panel_beaters_projected.csv  petcrematoria_projected.csv  pizza_projected.csv  printing_projected.csv  rail_projected.csv  servos_projected.csv  shipping_projected.csv  vicbakery_projected.csv  woodheater_projected.csv
tests/unit/: test_cli.py  test_config.py  test_gse_emis.py  test_input_data.py  test_inventory.py  test_notebooks.py  test_project.py
tests/unit/commands/: test_cli.py  test_point_sources.py  test_project.py  test_project_command.py  test_run.py
tests/unit/scaling/: test_scaling.py
