[build-system]
requires = [
    "setuptools>=41.2",
    "setuptools_scm[toml]>=1.15",
    "wheel>=0.31.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.coverage.run]
branch = true
source = [
    "src/ndcs"
]
omit = [
    # entrypoint for CLI
    "src/ndcs/main.py",
    # Exclude excel modules as they will likely be removed in future
    "*/excel/*"
]

[tool.coverage.report]
fail_under = 95
skip_empty = true
show_missing = true
# Regexes for lines to exclude from consideration in addition to the defaults
exclude_also = [
    # Don't complain about missing type checking code:
    "if TYPE_CHECKING",
]

[tool.mypy]
strict = true
# show error codes on failure with context
show_error_codes = true
show_error_context = true
# warn if code can't be reached
warn_unreachable = true
# importing following uses default settings
follow_imports = "normal"

[[tool.mypy.overrides]]
module = "xlwings.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "scmdata.*"
ignore_missing_imports = true


[tool.black]
line-length = 88
target-version = ['py310']

[tool.pytest.ini_options]
testpaths = "tests"
markers = [
    "noexcel: do not run any excel based tests",
]

[tool.ruff]
src = ["src"]
target-version = "py310"
select = [
    "E",  # pycodestyle error
    "W",  # pycodestyle warning
    "F",  # pyflakes
    "I",  # isort
    "D",  # pydocstyle
    "PL",  # pylint
    "TRY",  # tryceratops
    "NPY",  # numpy rules
    "RUF",  # ruff specifics
    "ERA",  # eradicate old commented out code
    "UP",  # pyupgrade
    "S",  # flake8-bandit
    # pandas support via pandas-vet. In some cases we will want to disable
    # this because it can lead to too many false positives.
    "PD",
]
unfixable = [
    "PD002",  # Disable autofix for inplace as this often introduces bugs
]
ignore = [
    "D200",  # One-line docstring should fit on one line with quotes
    "D400",  # First line should end with a period
    # TODO: relax the following
    "TRY003"  # Avoid specifying long messages outside the exception class
]
# Provide some leeway for long docstring, this is otherwise handled by black
line-length = 110

[tool.ruff.per-file-ignores]
"test*.py" = [
    "D", # Documentation not needed in tests
    "S101", # S101 Use of `assert` detected
    "PD901", "PD011", # Remove some pandas-specific checks
    "PLR2004" # Magic value used in comparison
]
"notebooks/*" = [
    "D100", # Missing docstring at the top of file
    "E402", # Module level import not at top of file
    "S101", # Use of `assert` detected
]
"scripts/*" = [
    "D", #  TODO: documentation in scripts
    "S101" # S101 Use of `assert` detected
]
"src/ndcs/excel*" = ["D"] # This module will be removed eventually

[tool.ruff.isort]
known-first-party = ["ndcs"]

[tool.ruff.pydocstyle]
convention = "numpy"
