[metadata]
name = spaemis
keywords = openscm, runner, python, simple, climate, model
author = Jared Lewis
author_email = jared.lewis@climate-rescource.com
license = MIT License

description = Creation of inventory files for regional air quality modelling
description_file = README.rst
long_description_content_type = text/x-rst
long_description =
    spaemis
    =======

    spaemis is a tool for producing a coherent set of emissions for regional air quality
    modelling.

    spaemis can create projections of future emissions based upon bottom up emissions
    inventories provided by Australian EPA's.

url = https://github.com/climate-resource/spaemis
# full list at https://pypi.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: BSD License
    Intended Audience :: Developers
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering

[options]
packages = find:
package_dir =
    =src
python_requires = >=3.9
install_requires =
    click
    scmdata>=0.14.2
    cattrs
    pyyaml
    xarray
    rioxarray
    geopandas
    netcdf4
    scipy
    pooch

[options.packages.find]
where = src

[options.extras_require]
notebooks =
    ipywidgets
    notebook
    jupyter-server<2
    seaborn
    jupytext==1.14.5
    python-dotenv
    papermill
    python-dotenv

tests =
    codecov
    coverage>=7.2.0
    nbval
    pytest-cov
    pytest-mock
    pytest>=4.0

docs =
    sphinx >= 1.4
    sphinx_rtd_theme
    sphinx-click

dev =
    black == 23.3.0
    mypy
    ruff == 0.0.265
    pre-commit
    joblib
    %(docs)s
    %(notebooks)s
    %(tests)s


[options.entry_points]
console_scripts =
    spaemis = spaemis.main:cli

